FIx for mobile readiness

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class='header-container'>
       <div class='header'>
         <div class='logo'>
-          <a href="index.html"><img src='https://i.ibb.co/tYGV7Lv/Authentic-Grace3.png' alt="logo" width="600"></a></div>
+          <a href="index.html"><img src='https://i.ibb.co/tYGV7Lv/Authentic-Grace3.png' alt="logo" ></a></div>
       </div>
     </div>
 
@@ -57,7 +57,7 @@
     <div class="content-main">
 
       <div class="current-promo">
-        <a href="shop.html"><img src="https://i.ibb.co/zPJCwWz/Current-Promo-Shop-Now.jpg" width="900" height="680" alt="Current Promotion"></a>
+        <a href="shop.html"><img src="https://i.ibb.co/zPJCwWz/Current-Promo-Shop-Now.jpg"  alt="Current Promotion"></a>
       </div>
 
       <div class="shop-link feature"><a href="shop.html"><img src="https://i.ibb.co/ct90Lgr/Current-Obsessions-1.png" alt="Current Obsessions"></a></div>
@@ -65,13 +65,13 @@
       <div class='photo-grid-container'>
         <div class='new-arrivals-grid'>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/QMsZbNt/adolescent-adult-beautiful-709799.jpg' alt="Model in white shirt" width="300" />
+            <img src='https://i.ibb.co/QMsZbNt/adolescent-adult-beautiful-709799.jpg' alt="Model in white shirt"  />
           </div>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/fX0FSpY/attractive-beautiful-blonde-709788.jpg' alt="Model in blue cardigan" width="300" />
+            <img src='https://i.ibb.co/fX0FSpY/attractive-beautiful-blonde-709788.jpg' alt="Model in blue cardigan"  />
           </div>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/PjMQxTJ/adolescent-attractive-beautiful-709802.jpg' alt="Model in white sweater" width="300" />
+            <img src='https://i.ibb.co/PjMQxTJ/adolescent-attractive-beautiful-709802.jpg' alt="Model in white sweater" />
           </div>
         </div>
       </div>
