Fix logo size all pages

--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
   </div>
 
   <!-- logo -->
-  <div class='header-container'>
-    <div class='header'>
-      <div class='logo'>
-        <a href="index.html"><img src='https://i.ibb.co/tYGV7Lv/Authentic-Grace3.png' alt="logo" width="600"></a></div>
+    <div class='header-container'>
+      <div class='header'>
+        <div class='logo'>
+          <a href="index.html"><img src='https://i.ibb.co/zRhKkXq/Authentic-Grace3.jpg' alt="logo" ></a></div>
+      </div>
     </div>
-  </div>
-
+    
   <!-- NAV BAR -->
   <div class="menu-container">
     <nav id="menu">
