--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class='header-container'>
       <div class='header'>
         <div class='logo'>
-          <a href="index.html"><img src='https://i.ibb.co/tYGV7Lv/Authentic-Grace3.png' alt="logo" ></a></div>
+          <a href="index.html"><img src='https://i.ibb.co/zRhKkXq/Authentic-Grace3.jpg' alt="logo" ></a></div>
       </div>
     </div>
 
@@ -65,13 +65,13 @@
       <div class='photo-grid-container'>
         <div class='new-arrivals-grid'>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/QMsZbNt/adolescent-adult-beautiful-709799.jpg' alt="Model in white shirt"  />
+            <img src='https://i.ibb.co/QpLFm2s/adolescent-adult-beautiful-709799-1.jpg' alt="Model in white shirt"  />
           </div>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/fX0FSpY/attractive-beautiful-blonde-709788.jpg' alt="Model in blue cardigan"  />
+            <img src='https://i.ibb.co/rHrTPzQ/attractive-beautiful-blonde-709788-1.jpg' alt="Model in blue cardigan"  />
           </div>
           <div class='new-arrivals-grid-item'>
-            <img src='https://i.ibb.co/PjMQxTJ/adolescent-attractive-beautiful-709802.jpg' alt="Model in white sweater" />
+            <img src='https://i.ibb.co/DGtvg9r/adolescent-attractive-beautiful-709802-1.jpg' alt="Model in white sweater" />
           </div>
         </div>
       </div>
