--- a/cart.html
+++ b/cart.html
@@ -26,10 +26,10 @@
   <div class='header-container'>
     <div class='header'>
       <div class='logo'>
-        <a href="index.html"><img src='https://i.ibb.co/tYGV7Lv/Authentic-Grace3.png' alt="logo" width="600"></a></div>
+        <a href="index.html"><img src='https://i.ibb.co/zRhKkXq/Authentic-Grace3.jpg' alt="logo" ></a></div>
     </div>
   </div>
-
+  
   <!-- NAV BAR -->
   <div class="menu-container">
     <nav id="menu">
